# android-adbd-for-linux

./: CMakeLists.txt  Makefile  README.md  adb.c  adb.h  mutex_list.h  priv_service.c  priv_service.h  services.c  socket_inaddr_any_server.c  socket_local_client.c  socket_local_server.c  socket_loopback_client.c  socket_loopback_server.c  socket_network_client.c  sockets.c  sockets_libcutils.c  sockets_libcutils.h  sysdeps.h  transport.c  transport_local.c  usb_linux_client.c
adb/: CMakeLists.txt  adb.c
adbd/: .gitignore  adb.c  adb.h  fdevent.c  priv_service.c  priv_service.h  propd.c  propd.h  services.c  sockets.c  sysdeps.h  transport.c  transport_local.c  usb_linux_client.c
kernel/f_adb/: config.diff  f_adb.c
kernel/f_fs/: config.diff
